Fixed the width of the social buttons <div> when displaying on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
 }
 
 #social {
-    width: 134px;
+    width: 140px;
     margin-top: 20px;
 }
 
